--- a/contactStyle.css
+++ b/contactStyle.css
@@ -1,212 +1,418 @@
-*, *:before, *:after {
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  body {
-    background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
-    font-size: 12px;
-  }
-  
-  body, button, input {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    letter-spacing: 1.4px;
-  }
-  pre{
-    color:#ed1c6f;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  .background {
-    display: flex;
-    min-height: 100vh;
-  }
-  
-  .container {
-    flex: 0 1 700px;
-    margin: auto;
-    padding: 10px;
-  }
-  
-  .screen {
-    position: relative;
-    background: #3e3e3e;
-    border-radius: 15px;
-  }
-  
-  .screen:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 20px;
-    right: 20px;
-    bottom: 0;
-    border-radius: 15px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
-    z-index: -1;
-  }
-  
-  .screen-header {
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-    background: #4d4d4f;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-  
-  .screen-header-left {
-    margin-right: auto;
-  }
-  
-  .screen-header-button {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-right: 3px;
-    border-radius: 8px;
-    background: white;
-  }
-  
-  .screen-header-button.close {
-    background: #ed1c6f;
-  }
-  
-  .screen-header-button.maximize {
-    background: #e8e925;
-  }
-  
-  .screen-header-button.minimize {
-    background: #74c54f;
-  }
-  
-  .screen-header-right {
-    display: flex;
-  }
-  
-  .screen-header-ellipsis {
-    width: 3px;
-    height: 3px;
-    margin-left: 2px;
-    border-radius: 8px;
-    background: #999;
-  }
-  
-  .screen-body {
-    display: flex;
-  }
-  
-  .screen-body-item {
-    flex: 1;
-    padding: 50px;
-  }
-  
-  .screen-body-item.left {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .app-title {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    color: #ea1d6f;
-    font-size: 26px;
-  }
-  
-  .app-title:after {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -10px;
-    width: 25px;
-    height: 4px;
-    background: #ea1d6f;
-  }
-  
-  .app-contact {
-    margin-top: auto;
-    padding: 20px;
-    font-size: 12px;
-    color: #ece1e1;
-  }
-  
-  .app-form-group {
-    margin-bottom: 15px;
-  }
-  
-  .app-form-group.message {
-    margin-top: 40px;
-  }
-  
-  .app-form-group.buttons {
-    margin-bottom: 0;
-    text-align: right;
-  }
-  
-  .app-form-control {
-    width: 100%;
-    padding: 10px 0;
-    background: none;
-    border: none;
-    border-bottom: 1px solid #666;
-    color: #ddd;
-    font-size: 14px;
-    outline: none;
-    transition: border-color .2s;
-  }
-  
-  .app-form-control::placeholder {
-    color: #666;
-  }
-  
-  .app-form-control:focus {
-    border-bottom-color: #ddd;
-  }
-  
-  .app-form-button {
-    background: none;
-    border: none;
-    color: #ea1d6f;
-    font-size: 14px;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .app-form-button:hover {
-    color: #b9134f;
-  }
-  
-  @media screen and (max-width: 520px) {
-    .screen-body {
-      flex-direction: column;
-    }
-  
-    .screen-body-item.left {
-      margin-bottom: 30px;
-    }
-  
-    .app-title {
-      flex-direction: row;
-    }
-  
-    .app-title span {
-      margin-right: 12px;
-    }
-  
-    .app-title:after {
-      display: none;
-    }
-  }
-  
-  @media screen and (max-width: 600px) {
-    .screen-body {
-      padding: 40px;
-    }
-  
-    .screen-body-item {
-      padding: 0;
-    }
-  }
+.contact_us * {
+  font-family: Nunito, sans-serif;
+}
+.contact_us .text-blk {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+margin-left: 0px;
+line-height: 25px;
+}
+
+.contact_us .responsive-cell-block {
+min-height: 75px;
+}
+
+.contact_us input:focus {
+outline-color: initial;
+outline-style: none;
+outline-width: initial;
+}
+
+.contact_us .container-block {
+min-height: 75px;
+height: fit-content;
+width: 100%;
+padding-top: 10px;
+padding-right: 10px;
+padding-bottom: 10px;
+padding-left: 10px;
+display: block;
+}
+
+.contact_us .responsive-container-block {
+min-height: 75px;
+height: fit-content;
+width: 100%;
+display: flex;
+flex-wrap: wrap;
+justify-content: flex-start;
+margin-top: 0px;
+margin-right: auto;
+margin-bottom: 50px;
+margin-left: auto;
+padding-top: 0px;
+padding-right: 0px;
+padding-bottom: 0px;
+padding-left: 0px;
+}
+
+.contact_us .responsive-container-block.big-container {
+background-color: #c9149c;
+position: static;
+height: auto;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 0px;
+margin-left: 0px;
+padding-top: 0px;
+padding-right: 30px;
+padding-bottom: 0px;
+padding-left: 30px;
+}
+
+.contact_us .responsive-container-block.container {
+position: static;
+min-height: 75px;
+flex-direction: column;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 0px;
+margin-left: 0px;
+background-color: #c621db;
+}
+
+.contact_us .container-block.form-wrapper {
+background-color: white;
+max-width: 1000px;
+text-align: center;
+box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 20px 7px;
+border-top-left-radius: 30px;
+border-top-right-radius: 30px;
+border-bottom-right-radius: 30px;
+border-bottom-left-radius: 30px;
+padding-top: 90px;
+padding-right: 40px;
+padding-bottom: 75px;
+padding-left: 40px;
+margin-top: 80px;
+margin-right: auto;
+margin-bottom: 100px;
+margin-left: auto;
+}
+
+.contact_us .text-blk.contactus-head {
+font-size: 38px;
+line-height: 52px;
+font-weight: 900;
+}
+
+.contact_us .text-blk.contactus-subhead {
+color: #9c9c9c;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 50px;
+margin-left: 0px;
+}
+
+.contact_us .responsive-cell-block.wk-desk-6.wk-ipadp-6.wk-tab-12.wk-mobile-12 {
+min-height: 50px;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 55px;
+margin-left: 0px;
+}
+
+.contact_us .input {
+width: 96%;
+height: 48px;
+padding-top: 1px;
+padding-right: 15px;
+padding-bottom: 1px;
+padding-left: 15px;
+font-size: 16px;
+color: black;
+border-top-width: initial;
+border-right-width: initial;
+border-bottom-width: 3px;
+border-left-width: initial;
+border-top-style: none;
+border-right-style: none;
+border-bottom-style: solid;
+border-left-style: none;
+border-top-color: initial;
+border-right-color: initial;
+border-bottom-color: #d8d7d7;
+border-left-color: initial;
+border-image-source: initial;
+border-image-slice: initial;
+border-image-width: initial;
+border-image-outset: initial;
+border-image-repeat: initial;
+}
+
+.contact_us .textinput {
+width: 98%;
+min-height: 220px;
+padding-top: 20px;
+padding-right: 15px;
+padding-bottom: 20px;
+padding-left: 15px;
+border-top-width: 2px;
+border-right-width: 2px;
+border-bottom-width: 2px;
+border-left-width: 2px;
+border-top-style: solid;
+border-right-style: solid;
+border-bottom-style: solid;
+border-left-style: solid;
+border-top-color: #eeeeee;
+border-right-color: #eeeeee;
+border-bottom-color: #eeeeee;
+border-left-color: #eeeeee;
+border-image-source: initial;
+border-image-slice: initial;
+border-image-width: initial;
+border-image-outset: initial;
+border-image-repeat: initial;
+font-size: 16px;
+border-top-left-radius: 4px;
+border-top-right-radius: 4px;
+border-bottom-right-radius: 4px;
+border-bottom-left-radius: 4px;
+background-color: #f1f2f3;
+}
+
+.contact_us .submit-btn {
+width: auto;
+background-color: #bc0acc;
+height: 58px;
+font-size: 20px;
+font-weight: 600;
+color: white;
+border-top-width: 0px;
+border-right-width: 0px;
+border-bottom-width: 0px;
+border-left-width: 0px;
+border-top-style: outset;
+border-right-style: outset;
+border-bottom-style: outset;
+border-left-style: outset;
+border-top-color: #767676;
+border-right-color: #767676;
+border-bottom-color: #767676;
+border-left-color: #767676;
+border-image-source: initial;
+border-image-slice: initial;
+border-image-width: initial;
+border-image-outset: initial;
+border-image-repeat: initial;
+padding-top: 1px;
+padding-right: 60px;
+padding-bottom: 1px;
+padding-left: 60px;
+border-top-left-radius: 35px;
+border-top-right-radius: 35px;
+border-bottom-right-radius: 35px;
+border-bottom-left-radius: 35px;
+cursor: pointer;
+}
+
+.contact_us .form-box {
+margin-top: 0px;
+margin-right: auto;
+margin-bottom: 0px;
+margin-left: auto;
+padding-top: 80px;
+padding-right: 0px;
+padding-bottom: 0px;
+padding-left: 0px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+text-align: center;
+}
+
+.contact_us .text-blk.input-title {
+text-align: left;
+padding-top: 0px;
+padding-right: 0px;
+padding-bottom: 0px;
+padding-left: 10px;
+font-size: 19px;
+color: black;
+font-weight: 600;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 15px;
+margin-left: 0px;
+}
+
+.contact_us ::placeholder {
+color: #b4b4b4;
+}
+
+.contact_us .text-blk.contact-head {
+font-size: 36px;
+line-height: 50px;
+font-weight: 700;
+color: white;
+margin-top: 0px;
+margin-right: 0px;
+margin-bottom: 15px;
+margin-left: 0px;
+}
+
+.contact_us .text-blk.contact-subhead {
+max-width: 670px;
+font-size: 20px;
+line-height: 27px;
+color: white;
+}
+
+@media (max-width: 1024px) {
+.contact_us .responsive-container-block.container {
+  padding-top: 0px;
+  padding-right: 30px;
+  padding-bottom: 0px;
+  padding-left: 30px;
+}
+
+.contact_us .container-block.form-wrapper {
+  margin-top: 60px;
+  margin-right: 0px;
+  margin-bottom: 80px;
+  margin-left: 0px;
+}
+}
+
+@media (max-width: 768px) {
+.contact_us .submit-btn {
+  width: 100%;
+}
+
+.contact_us .input {
+  width: 100%;
+}
+
+.contact_us .textinput {
+  width: 100%;
+}
+
+.contact_us .container-block.form-wrapper {
+  margin-top: 80px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
+
+.contact_us .text-blk.input-title {
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+
+.contact_us .container-block.form-wrapper {
+  margin-top: 80px;
+  margin-right: 0px;
+  margin-bottom: 80px;
+  margin-left: 0px;
+}
+
+.contact_us .text-blk.contact-subhead {
+  font-size: 18px;
+}
+}
+
+@media (max-width: 500px) {
+.contact_us .container-block.form-wrapper {
+  padding-top: 50px;
+  padding-right: 15px;
+  padding-bottom: 50px;
+  padding-left: 15px;
+}
+
+.contact_us .container-block.form-wrapper {
+  margin-top: 60px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+}
+
+.contact_us .responsive-cell-block.wk-ipadp-6.wk-tab-12.wk-mobile-12.wk-desk-6 {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 15px;
+  margin-left: 0px;
+}
+
+.contact_us .responsive-container-block {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 35px;
+  margin-left: 0px;
+}
+
+.contact_us .text-blk.input-title {
+  font-size: 12px;
+}
+
+.contact_us .responsive-container-block.container {
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+}
+
+.contact_us .container-block.form-wrapper {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding-top: 50px;
+  padding-right: 20px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  margin-top: 50px;
+  margin-right: 0px;
+  margin-bottom: 80px;
+  margin-left: 0px;
+}
+
+.contact_us .form-box {
+  padding-top: 50px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+
+.contact_us .text-blk.contact-head {
+  font-size: 35px;
+  line-height: 40px;
+}
+
+.contact_us .text-blk.contact-subhead {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.contact_us .text-blk.input-title {
+  font-size: 16px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+}
+
+.contact_us .responsive-cell-block.wk-ipadp-6.wk-tab-12.wk-mobile-12.wk-desk-6 {
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 35px;
+  margin-left: 0px;
+}
+
+.contact_us .input {
+  height: 40px;
+}
+
+.contact_us .text-blk.contact-head {
+  font-size: 26px;
+  line-height: 35px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+}
+}
