--- a/style.css
+++ b/style.css
@@ -15,11 +15,20 @@ body{
 }
 nav{
   display: flex;
+  flex-direction: row;
   width: 100%;
   justify-content: space-around;
   height: 80px;
   line-height: 80px;
   z-index: 111;
+}
+.li1{
+  display: flex;
+  flex-direction: row;
+}
+.li2{
+  display: flex;
+  flex-direction: row;
 }
 .logo{
   display: flex;
@@ -174,4 +183,61 @@ button:hover{
   top: -20px;
   right: -80px;
   border-radius: 50%;
+}
+@media only screen and (max-width: 768px) {
+  body{
+    overflow: hidden;
+  }
+  nav {
+    flex-direction: row;
+    align-items: center;
+    height: auto;
+  }
+  .logo{
+    position: relative;
+    font-size: 30px;
+    left: 50px;
+    bottom: 10px;
+  }
+  .navItems {
+    display: flex;
+    flex-direction: column;
+    font-size: 1px;
+    align-items: inherit;
+  }
+.li1,a{
+  display: flex;
+  flex-direction: row;
+}
+.li2,a{
+  display: flex;
+  flex-direction: row;
+}
+  .wrapper {
+    height: auto;
+    padding:15% 15%;
+    position: relative;
+    top: 1px;
+  }
+  .cols {
+    width: 90%;
+  }
+  .cols0 {
+    order: 2;
+  }
+  .topline {
+    font-size: 15px;
+    margin-bottom: 10px;
+  }
+  h1 {
+    font-size: 1.8em;
+  }
+  .btns {
+    flex-direction: column;
+    left: 0;
+    margin: 20px 0;
+  }
+  button {
+    margin: 10px 0;
+  }
 }
