--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ button:hover{
   right: -80px;
   border-radius: 50%;
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (min-width: 360px){
   body{
     overflow: hidden;
   }
